updated with malito

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-  <head>
-    <title> Kira's Github Portfolio </title>
-  </head>
-  <body>
-    <h1> Kira's Github Portfolio </h1>
-    <p> This is Kira's placeholder page. </p>
-  </body>
+
+<head>
+  <title> Kira's Github Portfolio </title>
+</head>
+
+<body>
+  <h1> Kira's Github Portfolio </h1>
+  <p> More work coming soon!</p>
+  <a href="mailto: kiranw6691@gmail.com">kiranw6691@gmail.com</a>
+</body>
+
 </html>
